tests/baselines/reference/parserSkippedTokens2.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens2.ts(1,1): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens2.ts(1,2): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens2.ts (2 errors) ====
    \\
    
!!! error TS1127: Invalid character.
     
!!! error TS1127: Invalid character.